--- a/views/index.hbs
+++ b/views/index.hbs
@@ -255,20 +255,34 @@
 				// carryout ajax request to server -> store the information -> start a new session with this user
 
 				$.ajax({
-					method: "POST",
-					url: 'http://localhost/themepic/signup.php',
-					//					url: "http://localhost/themepic/checkemailexists.php",
-					data: {
-						'user-name': $('#user-name').val(),
-						'user-email': $('#user-email').val(),
-						'user-pass': $('#user-pass').val()
-					},
-					success: function( msg ) {
-						let myObj = JSON.parse(msg);
-						console.log(myObj);
+				    url: '/data',
+				    type: 'post',
+				    data: {
+							"name": $('#user-name').val(),
+							"email": $('#user-email').val(),
+							"password": $('#user-pass').val(),
+				    },
+				    headers: {
+				        'content-type': 'application/json',  //for object property name, use quoted notation shown in second
+				    },
+				    dataType: 'json',
+				    success: function (data) {
+				        console.log(data);
+				    },
+						fail: (e) => {
+							console.log(e);
+						}
+				});
 
-					}
-				})
+				// $.post('/data',{
+				// 		name: $('#user-name').val(),
+				// 		email: $('#user-email').val(),
+				// 		password: $('#user-pass').val(),
+				// }).done((msg) => {
+				// 	console.log('message received from server:', msg);
+				// }).fail((e) => {
+				// 	console.log('something is not right:::',e);
+				// })
 
 			});
 
