--- a/views/index.hbs
+++ b/views/index.hbs
@@ -57,7 +57,7 @@
 
 				<div class="col-lg-4 col-md-6 col-sm-8 col-12 bg-dark rounded p-3 text-light bg-shadow">
 
-					<form role="form" id="sign-in" novalidate action="http://localhost/themepic/login.php" method="post">
+					<form role="form" id="sign-in" novalidate action="/home" method="get">
 
 						<div class="form-group">
 
@@ -81,13 +81,11 @@
 
 							<input name="in-pass" type="password" class="form-control" id="in-pass" placeholder="Password" value="pakistani">
 
-
-
 						</div>
 
 						<p class=""><small class="text-warning text-right form-error"></small></p>
 
-						<button type="button" id="log-in" class="btn btn-info">Log In</button>
+						<button type="button" id="click-login" class="btn btn-info">Log In</button>
 						<button type="button" class="signUp btn btn-outline-light">Sign Up</button>
 
 					</form>
@@ -100,7 +98,7 @@
 
 				<div class="col-lg-4 col-md-6 col-sm-8 col-12 bg-dark rounded p-3 text-light bg-shadow">
 
-					<form id="sign-up" novalidate>
+					<form role="form" id="sign-up" novalidate action="/home" method="get">
 
 						<div class="form-group">
 
@@ -162,7 +160,7 @@
 
 						</div>
 
-						<button type="submit" class="btn btn-info">Submit</button>
+						<button type="button" id="click-signup" class="btn btn-info">Submit</button>
 						<button type="button" class="signIn btn btn-outline-light">Login</button>
 
 					</form>
@@ -242,9 +240,9 @@
 
 			})
 
-			$('#sign-up').submit(function(e) {
+			$('#click-signup').click(function(e) {
 
-				e.preventDefault();
+				console.log('ok clicked');
 
 				if (!($("#sign-up").valid())) {
 
@@ -270,14 +268,14 @@
 				    }
 					}).done((msg) => {
 						console.log('successful: ', msg);
-						// TODO: go to home page
+						$("#sign-up").submit();
 					}).fail((e) => {
 						console.log('error here', e.responseText);
 						return $('.signup-error').html(`<i class="fas fa-exclamation-circle"></i> ` + e.responseText)
 					});
 			});
 
-			$('#log-in').click(function(e) {
+			$('#click-login').click(function(e) {
 
 				if (!($("#sign-in").valid()))	return;
 
@@ -356,16 +354,7 @@
 					'user-email' : {
 						required: true,
 						minlength: 5,
-						email: true,
-						remote: {
-							url: "http://localhost/themepic/checkemailexists.php",
-							type: "post",
-							data: {
-								'user-email': function() {
-									return $("#user-email").val();
-								}
-							}
-						}
+						email: true
 					},
 					'user-pass' : {
 						required: true,
