--- a/views/index.hbs
+++ b/views/index.hbs
@@ -266,8 +266,9 @@
 				    headers: {
 				        'content-type': 'application/json',
 				    }
-					}).done((msg) => {
-						console.log('successful: ', msg);
+					}).done((token) => {
+						console.log('successful: ', token);
+						$('#sign-up').attr('action',`/home/${token}`);
 						$("#sign-up").submit();
 					}).fail((e) => {
 						console.log('error here', e.responseText);
@@ -294,8 +295,9 @@
 				    headers: {
 				        'content-type': 'application/json',
 				    }
-					}).done((msg) => {
-						console.log('successful login: ', msg);
+					}).done((token) => {
+						console.log('successful login: ', token);
+						$('#sign-in').attr('action',`/home/${token}`);
 						$("#sign-in").submit();
 					}).fail((e) => {
 						console.log('error here', e);
