--- a/views/index.hbs
+++ b/views/index.hbs
@@ -157,7 +157,7 @@
 
 						</div>
 
-						<p class="d-none"><small class="text-warning text-right check-label"><label for="agreeTerms" generated="true" class="signup-error"></label></small></p>	
+						<p class="d-none"><small class="text-warning text-right check-label"><label for="agreeTerms" generated="true" class="signup-error"></label></small></p>
 
 						<button type="button" id="click-signup" class="btn btn-info">Submit</button>
 						<button type="button" class="signIn btn btn-outline-light">Login</button>
@@ -178,26 +178,48 @@
 
 							<div class="d-flex justify-content-between align-items-center">
 
-								<label for="fp-email">Your email address</label>
+								<label class="level-0" for="fp-email">Your email address</label>
 
-								<small class="text-warning pl-2 text-right"><label for="fp-email" generated="true" class="error"></label></small>
+								<small class="text-warning pl-2 text-right"><label for="fp-email" generated="true" class="error fp-email-error"></label></small>
 
 							</div>
 
-							<input name="fp-email" type="text" class="form-control" id="fp-email" aria-describedby="emailHelp" placeholder="Enter your email address" value="Qasim">
+							<input name="fp-email" type="text" class="level-0 form-control" id="fp-email" aria-describedby="emailHelp" placeholder="qasimali24@gmail.com" value="">
 
 							<small class="text-muted">If you do not have your email registered, please sign up.</small>
 
 						</div>
 
+						<button type="button" id="rx-code" class="level-0 mb-2 btn btn-info" name="button">Recieve code</button>
+
+						<hr class="bg-info">
+
 						<div class="form-group">
 
 							<div class="d-flex justify-content-between align-items-center">
-								<label for="fp-pass">Password</label>
+
+								<label id="level-1" class="level-1 text-muted" for="fp-code">Code recieved in email</label>
+
+								<small class="text-warning pl-2 text-right"><label for="fp-code" generated="true" class="error"></label></small>
+
+							</div>
+
+							<input disabled name="fp-code" type="text" class="level-1 form-control bg-dark" id="fp-code" aria-describedby="emailHelp" placeholder="123asd" value="123asd">
+
+							<small class="text-muted">Only write the code.</small>
+
+						</div>
+
+						<hr class="bg-info">
+
+						<div class="form-group">
+
+							<div class="d-flex justify-content-between align-items-center">
+								<label class="text-muted" for="fp-pass">Password</label>
 								<small class="text-warning pl-2 text-right"><label for="fp-pass" generated="true" class="error"></label></small>
 							</div>
 
-							<input name="fp-pass" type="password" class="form-control" id="fp-pass" placeholder="Password" value="pakistani">
+							<input disabled name="fp-pass" type="password" class="form-control bg-dark" id="fp-pass" placeholder="Password" value="pakistani">
 
 							<small class="text-muted">Create an easy password. Np :)</small>
 
@@ -206,11 +228,11 @@
 						<div class="form-group">
 
 							<div class="d-flex justify-content-between align-items-center">
-								<label for="fp-pass2">Confirm Password</label>
+								<label class="text-muted" for="fp-pass2">Confirm Password</label>
 								<small class="text-warning pl-2 text-right"><label for="fp-pass2" generated="true" class="error"></label></small>
 							</div>
 
-							<input name="fp-pass2" type="password" class="form-control" id="fp-pass2" placeholder="Password" value="pakistani">
+							<input disabled name="fp-pass2" type="password" class="form-control bg-dark" id="fp-pass2" placeholder="Password" value="pakistani">
 
 							<small class="text-muted">Please enter same as you entered in previous field.</small>
 
@@ -218,7 +240,7 @@
 
 						<p class="d-none"><small class="text-warning pl-2 text-right check-label"><label for="agreeTerms" generated="true" class="forgotpassword-error"></label></small></p>
 
-						<button type="button" id="click-forgotpassword" class="btn btn-info">Submit</button>
+						<button disabled type="button" id="click-forgotpassword" class="btn btn-info">Submit</button>
 						<button type="button" class="signIn btn btn-outline-light">Log In</button>
 						<button type="button" class="signUp btn btn-outline-light">Sign Up</button>
 
@@ -391,6 +413,19 @@
 					});
 
 			});
+
+			$('#rx-code').click(() => {
+
+				if ( $('#fp-email').val() === '' || !((/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/).test($('#fp-email').val())) ) return $('.fp-email-error').html('<i class="fas fa-exclamation-circle"></i> Invalid field.');
+
+				$('.fp-email-error').html('');
+
+				//TODO: perform ajax to server here
+				$('.level-1').removeClass('text-muted bg-dark').attr('disabled',false);
+				$('.level-0').attr('disabled',true).addClass('bg-dark text-muted');
+
+
+			})
 
 			$.validator.setDefaults({
 
