poush on orders from begum

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -85,7 +85,7 @@
 
 						<button type="button" id="click-login" class="btn btn-info">Log In</button>
 						<button type="button" class="signUp btn btn-outline-light">Sign Up</button>
-						<button type="button" class="forgotpassword btn btn-dark">Forgot Password ?</button>
+						<button type="button" class="forgotpassword btn btn-dark"><small>Forgot Password ?</small></button>
 
 					</form>
 
