send email in progress

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -420,7 +420,7 @@
 
 				$('.fp-email-error').html('');
 
-				//TODO: perform ajax to server here
+				//TODO: perform ajax to server here to send email
 				$('.level-1').removeClass('text-muted bg-dark').attr('disabled',false);
 				$('.level-0').attr('disabled',true).addClass('bg-dark text-muted');
 				$('#rx-code').attr('disabled',true);
