--- a/views/index.hbs
+++ b/views/index.hbs
@@ -253,7 +253,7 @@
 
 							</div>
 
-							<input name="fp-code" type="text" class="level-1 form-control bg-dark" id="fp-code" aria-describedby="emailHelp" placeholder="123asd" value="" maxlength="6">
+							<input disabled name="fp-code" type="text" class="level-1 form-control bg-dark" id="fp-code" aria-describedby="emailHelp" placeholder="123asd" value="" maxlength="6">
 
 							<small class="text-muted">Check your email for the code and write above.</small>
 							<br>
@@ -270,7 +270,7 @@
 								<small class="text-warning pl-2 text-right"><label for="fp-pass" generated="true" class="error"></label></small>
 							</div>
 
-							<input name="fp-pass" type="password" class="level-2 form-control bg-dark" id="fp-pass" placeholder="Password" value="pakistani">
+							<input disabled name="fp-pass" type="password" class="level-2 form-control bg-dark" id="fp-pass" placeholder="Password" value="pakistani">
 
 							<small class="text-muted">Create an easy password. Np :)</small>
 
@@ -283,17 +283,19 @@
 								<small class="text-warning pl-2 text-right"><label for="fp-pass2" generated="true" class="error"></label></small>
 							</div>
 
-							<input name="fp-pass2" type="password" class="level-2 form-control bg-dark" id="fp-pass2" placeholder="Password" value="pakistani">
+							<input disabled name="fp-pass2" type="password" class="level-2 form-control bg-dark" id="fp-pass2" placeholder="Password" value="pakistani">
 
 							<small class="text-muted">Please enter same as you entered in previous field.</small>
 
 						</div>
 
 						<p class=""><small class="d-none text-warning check-label"><label for="agreeTerms" generated="true" class="forgotpassword-error"></label></small></p>
-
-						<button type="button" id="click-forgotpassword" class="level-2 btn btn-info">Submit</button>
-						<button type="button" class="signIn btn btn-outline-light">Log In</button>
+						<button disabled type="button" id="click-forgotpassword" class="btn btn-info">Submit</button>
+						<button type="button" id="login-forgotpassword" class="signIn btn btn-outline-light">Log In</button>
 						<button type="button" class="signUp btn btn-outline-light">Sign Up</button>
+						<div class="mt-2 pb-0 d-none password-notif ">
+								<span class="text-success"><i class="fas fa-check-circle"></i><small id="mail_sent" class="text-light"> <b> </b></small></span>
+						</div>
 
 					</form>
 
@@ -458,8 +460,7 @@
 				    }
 					}).done((token) => {
 						console.log('successful login: ', token);
-						$('#sign-in').attr('action',`/home/${token}`);
-						$("#sign-in").submit();
+						window.location.replace(`/home/${token}`);
 					}).fail((e) => {
 						console.log('error here', e);
 						return $('.form-error').html(`<i class="fas fa-exclamation-circle"></i> ` + e.responseText);
@@ -535,14 +536,11 @@
 
 			$('#click-forgotpassword').click(() => {
 				console.log('click the button');
-				if ($('#fp-pass').val() === '' || $('#fp-pass2').val() === '') {
-					console.log('error is here');
-					return $('.forgotpassword-error').html('Please fill in valid fields for the passwords.').closest('small').removeClass('d-none');
-				}
+				if ($('#fp-pass').val() === '' || $('#fp-pass2').val() === '') return $('.forgotpassword-error').html('Please fill in valid fields for the passwords.').closest('small').removeClass('d-none');
 
-				if ($('#fp-pass').val() !== $('#fp-pass2').val()) {
-					return $('.forgotpassword-error').html('Your passwords do not match.').closest('small').removeClass('d-none');
-				}
+				if ($('#fp-pass').val() !== $('#fp-pass2').val()) return $('.forgotpassword-error').html('Your passwords do not match.').closest('small').removeClass('d-none');
+
+				if ($('#fp-pass').val().length < 6) return $('.forgotpassword-error').html('Minimum 6 figure password please.').closest('small').removeClass('d-none');
 
 				$('.forgotpassword-error').closest('small').addClass('d-none');
 
@@ -564,7 +562,10 @@
 				    }
 					}).done((msg) => {
 						console.log('Done:',msg);
-						
+						$('.password-notif').removeClass('d-none').find('b').html(msg);
+						$('#click-forgotpassword').attr('disabled',true);
+						$('.level-2').addClass('bg-dark text-muted').attr('disabled',true);
+						$('#login-forgotpassword').toggleClass('btn-outline-light btn-light');
 					}).fail((e) => {
 						console.log(e.responseText,e);
 						return $('.forgotpassword-error').html(e.responseText).closest('small').removeClass('d-none');
